FIX Correct spacing for short header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,10 @@ body.short
     padding-top: 40px;
 }
 
+body.short h2 {
+    padding-bottom: 30px;
+}
+
 .community-page header
 {
     background: url(../images/community-header.svg) top center no-repeat;
